--- a/agendamento.html
+++ b/agendamento.html
@@ -1,75 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Clínica Médica - Agendamento</title>
+    <title>Clínica F&G - Galeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_agendamento.css">
 </head>
+
 <body>
-<header class="bg-primary text-white p-3">
+
+<div>
+    <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
+</div>
+
+<nav class="navbar-custom">
     <div class="container">
-        <h1>Clínica Saúde & Bem-Estar</h1>
-    </div>
-</header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+        <a href="index.html" class="navbar-logo">
+            <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="principal.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="agendamento.html">Agendamento</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-            </ul>
-        </div>
+
+        <ul class="collapse navbar-nav-custom" id="navbarNav">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="galeria.html">Galeria</a></li>
+            <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+            <li class="nav-item"><a class="nav-link active" href="agendamento.html">Agendamento</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+        </ul>
+
     </div>
 </nav>
-<main class="container my-4">
-    <h2>Agendamento de Consultas</h2>
-    <p>Preencha os dados abaixo para solicitar seu agendamento. Entraremos em contato para confirmar.</p>
-    <form>
-        <div class="mb-3">
-            <label for="patientName" class="form-label">Nome Completo:</label>
-            <input type="text" class="form-control" id="patientName" name="patientName" required>
-        </div>
-        <div class="mb-3">
-            <label for="patientContact" class="form-label">Telefone ou Email:</label>
-            <input type="text" class="form-control" id="patientContact" name="patientContact" required placeholder="(XX) XXXXX-XXXX ou email@exemplo.com">
-        </div>
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <label for="appointmentDate" class="form-label">Data Preferencial:</label>
-                <input type="date" class="form-control" id="appointmentDate" name="appointmentDate" required>
+
+<main>
+    <section class="agendamento-form">
+        <h2>Agende sua Consulta</h2>
+        <form action="#" method="POST" class="formulario">
+            <div class="grupo-form">
+                <label for="name">Nome Completo:</label>
+                <input type="text" id="name" name="name" required>
             </div>
-            <div class="col-md-6">
-                <label for="appointmentTime" class="form-label">Hora Preferencial:</label>
-                <input type="time" class="form-control" id="appointmentTime" name="appointmentTime" required>
+
+            <div class="grupo-form">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
             </div>
-        </div>
-        <div class="mb-3">
-            <label for="doctorSpecialty" class="form-label">Médico/Especialidade:</label>
-            <select class="form-select" id="doctorSpecialty" name="doctorSpecialty" required>
-                <option value="">Selecione...</option>
-                <option value="clinico_geral">Clínico Geral</option>
-                <option value="pediatra">Pediatra</option>
-                <option value="dermatologista">Dermatologista</option>
-                <option value="cardiologista">Cardiologista</option>
-                <option value="ginecologista">Ginecologista</option>
-            </select>
-        </div>
-        <button type="submit" class="btn btn-success">Solicitar Agendamento</button>
-    </form>
+
+            <div class="grupo-form">
+                <label for="phone">Telefone:</label>
+                <input type="tel" id="phone" name="phone" placeholder="(XX) XXXXX-XXXX" pattern="[0-9]{2}[0-9]{4,5}[0-9]{4}" required>
+            </div>
+
+            <div class="grupo-form">
+                <label for="specialty">Especialidade:</label>
+                <select id="specialty" name="specialty" required>
+                    <option value="">Selecione uma especialidade</option>
+                    <option value="clinico-geral">Clínico Geral</option>
+                    <option value="dermatologia">Dermatologia</option>
+                    <option value="cardiologia">Cardiologia</option>
+                    <option value="pediatria">Pediatria</option>
+                    <option value="ginecologia">Ginecologia</option>
+                </select>
+            </div>
+
+            <div class="grupo-form">
+                <label for="date">Data Preferencial:</label>
+                <input type="date" id="date" name="date" required>
+            </div>
+
+            <div class="grupo-form">
+                <label for="time">Horário Preferencial:</label>
+                <input type="time" id="time" name="time" required>
+            </div>
+
+            <div class="grupo-form">
+                <label for="message">Mensagem (opcional):</label>
+                <textarea id="message" name="message" rows="4"></textarea>
+            </div>
+
+            <button type="submit">Agendar Consulta</button>
+        </form>
+    </section>
 </main>
-<footer class="bg-dark text-white text-center p-3">
+
+<footer class=" text-white text-center p-3">
     <div class="container">
-        <p>&copy; 2024 Clínica Saúde & Bem-Estar. Todos os direitos reservados.</p>
+        <p>&copy; 2025 - Clínica F&G. Todos os direitos reservados.</p>
     </div>
 </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
