--- a/estrutura interna/listar-medicos.html
+++ b/estrutura interna/listar-medicos.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Listar Médicos</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="estilo-restrito.css">
+  <link rel="stylesheet" href="../css/estilo-restrito.css">
 </head>
 
 <body>
