--- a/index.html
+++ b/index.html
@@ -114,40 +114,40 @@
     <div class="duvidas-container">
         <h2 class="duvidas-title">Dúvidas frequentes</h2>
         <div class="duvidas-item">
-            <div class="duvidas-question">
+            <div class="duvidas-pergunta">
                 O que é a Clínica F&G?
                 <span class="arrow">▼</span>
             </div>
-            <div class="duvidas-answer">
+            <div class="duvidas-resposta">
                 <p>A Clínica F&G é um centro médico completo e moderno, dedicado a oferecer atendimento de saúde de excelência em diversas especialidades.
                     Nosso principal objetivo é proporcionar um cuidado humanizado e integral para você e sua família.</p>
             </div>
         </div>
         <div class="duvidas-item">
-            <div class="duvidas-question">
+            <div class="duvidas-pergunta">
                 Quais especialidades médicas estão disponíveis na Clínica F&G?
                 <span class="arrow">▼</span>
             </div>
-            <div class="duvidas-answer">
+            <div class="duvidas-resposta">
                 <p>Na Clínica F&G, você encontra uma vasta gama de especialidades médicas para cuidar da sua saúde de forma abrangente. Contamos com profissionais
                     em clínica geral, cardiologia, dermatologia, ginecologia, pediatria, ortopedia e muitas outras áreas.</p>
             </div>
         </div>
         <div class="duvidas-item">
-            <div class="duvidas-question">
+            <div class="duvidas-pergunta">
                 A Clínica F&G aceita planos de saúde?
                 <span class="arrow">▼</span>
             </div>
-            <div class="duvidas-answer">
+            <div class="duvidas-resposta">
                 <p>Sim, a Clínica F&G tem convênio com diversos planos de saúde para facilitar seu acesso aos nossos serviços.</p>
             </div>
         </div>
         <div class="duvidas-item">
-            <div class="duvidas-question">
+            <div class="duvidas-pergunta">
                 Posso realizar exames na Clínica F&G?
                 <span class="arrow">▼</span>
             </div>
-            <div class="duvidas-answer">
+            <div class="duvidas-resposta">
                 <p>Sim, a Clínica F&G oferece a comodidade de realizar uma variedade de exames laboratoriais
                     e de imagem, como ultrassonografia e eletrocardiograma, em um só lugar.</p>
             </div>
@@ -165,7 +165,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    const perguntas = document.querySelectorAll('.duvidas-question');
+    const perguntas = document.querySelectorAll('.duvidas-pergunta');
 
     perguntas.forEach(function (pergunta) {
         pergunta.addEventListener('click', function () {
