--- a/agendamento.html
+++ b/agendamento.html
@@ -86,6 +86,7 @@
                 </div>
 
                 <button type="submit">Agendar Consulta</button>
+                <p class="text-secondary">Após a confirmação de sua consulta, você receberá um e-mail com os detalhes</p>
             </form>
         </section>
     </main>
